# EVChargingTrackerHA

./: .replit  API_DOCUMENTATION.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.simple  HOME_ASSISTANT_ADDON_SETUP.md  HOME_ASSISTANT_SETUP.md  README.md  api.py  api_client.py  app.py  app.py.backup  background.py  charging_network.py  create_ha_component_package.sh  create_test_data.py  credentials.json  data_parser.py  data_storage.py  data_visualizer.py  data_visualizer.py.bak  docker-compose.yml  docker-requirements.txt  docker-setup.sh  download_for_deployment.sh  gmail_api.py  location_mapper.py  network_map.py  pdf_parser.py  predictive_analysis.py  proxy_app.py  pyproject.toml  replit.nix  run_combined.py  start.sh  test_api_client.py  test_evcc_csv.py  test_summary.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-ValueError-Invalid-value-of-type-narwhals-stable-v1-Series-received-for-the-size-property-of-sc-1742994150101.txt  session (2).csv
azure_deployment/: AZURE_DEPLOYMENT.md  QUICK_START.md  README.md  app.py  application.py  azure_data_storage_patch.py  azure_storage.py  deploy.sh  github-workflow-azure.yml  package_for_azure.sh  requirements.txt  run_proxy_azure.py  web.config
azure_deployment/.streamlit/: config.toml
custom_components/: __init__.py  evchargingtracker_replit.zip.readme
custom_components/evchargingtracker/: README.md  REPLIT_MODE.md  api.py  (+6 more)
data/: charging_data.json
examples/: api_usage_example.py  hass_configuration.yaml  test_hass_integration.py
ha_addon/: build.sh
ha_package_docs/: INSTALLATION_GUIDE.md
(+36 files in other folders)
